syntax = "proto3";
option java_package = "edu.usfca.cs.dfs";

message GetPrimaryStorageNode {
	string fileName = 1;
	int32 chunkId = 2;
	int32 chunkSize = 3;
}

message StoreChunk {
    string fileName = 1;
    int32 chunkId = 2;
    bytes data = 3;
    string checksum = 4;
    bool isCompressed = 5;
}

message StorageNode {
	string storageNodeId = 1;
	string storageNodeAddr = 2;
	int32 storageNodePort = 3;
	int32 currentStorageValue = 4;
	int32 maxStorageValue = 5;
	repeated string replicationNodeIds = 6;
}

message ChunkMapping {
	string fileName = 1;
	int32 chunkId = 2;
	repeated StorageNode storageNodeObjs = 3;
}

message RetrieveFile {
    string fileName = 1;
}

message StorageMessageWrapper {
	GetPrimaryStorageNode getPrimaryStorageNodeMsg = 1;
    StoreChunk storeChunkMsg = 2;
    StorageNode storageNodeMsg = 3;
    RetrieveFile retrieveFileMsg = 4;
}
